[package]
name = "image-viewer"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.5.2"
crossbeam-channel = "0.5.0"
log = "0.4.11"
druid-lens-compose = "0.2"
notify = "5.0.0-pre.13"
#druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
easings = "0.1.0"
clap = "3.0.7"
qu = "0.4.2"
druid-material-icons = "0.1.0"

[dependencies.druid]
#path = "../../contrib/druid/druid"
git = "https://github.com/linebender/druid"
rev = "0a82b127eac325c9c721364a5d81f1bfd931cb13"
version = "0.7"
features = [
    "image",
    "svg",
    "png",
    "jpeg",
    "jpeg_rayon",
    "gif",
    "bmp",
    "ico",
    "tiff",
    "webp",
    "pnm",
    "dds",
    "tga",
    "farbfeld",
    "dxt",
    "hdr",
]
